k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "false"   # not needed for static
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - myapp.local
      secretName: myapp-tls
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /api/user/
            pathType: Prefix
            backend:
              service:
                name: user-clusterip
                port:
                  number: 4040
          - path: /api/commerce/
            pathType: Prefix
            backend:
              service:
                name: commerce-clusterip
                port:
                  number: 5050
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3030
